crates/vaab-types/tests/snapshots/errors__a_call_that_names_a_parameter_that_does_not_exist.snap
---
source: crates/vaab-types/tests/errors.rs
assertion_line: 277
expression: "errors(\"to greet(name: Text) returns Text = \\\"hello, {name}\\\"\\n\\\n         let hello = greet(nme: \\\"Ada\\\")\\n\")"
---
[unknown-argument] Error: `greet` has no parameter called `nme`
   ╭─[ example.vaab:2:19 ]
   │
 2 │ let hello = greet(nme: "Ada")
   │                   ─┬─  
   │                    ╰─── this name is not one of its parameters
   │ 
   │ Help: did you mean `name`?
───╯
