crates/vaab-types/tests/snapshots/errors__a_change_that_changes_another_shared_value.snap
---
source: crates/vaab-types/tests/errors.rs
expression: "errors(\"let counter = Shared.new(0)\\n\\\n         let other = Shared.new(0)\\n\\\n         counter.update(n -> {\\n\\\n         \\x20   other.update(m -> m + 1)\\n\\\n         \\x20   n\\n\\\n         })\\n\")"
---
[update-cannot-wait] Error: the change given to `.update` cannot wait for anything
   ╭─[ example.vaab:4:5 ]
   │
 4 │     other.update(m -> m + 1)
   │     ────────────┬───────────  
   │                 ╰───────────── this changes a shared value, which waits for its turn
   │ 
   │ Help: work the new value out before the `.update`, and hand the finished value in: `let next = ...` and then `.update(value -> next)`
   │ 
   │ Note: `.update` holds the shared value while the change runs, so a wait inside it would keep every other task away from the value until the wait ended — and it may be one of those tasks the wait is for
───╯
