crates/vaab-types/tests/snapshots/errors__a_change_that_sends_a_value.snap
---
source: crates/vaab-types/tests/errors.rs
expression: "errors(\"let counter = Shared.new(0)\\n\\\n         let inbox = Channel.new(of: Int, size: 1)\\n\\\n         counter.update(n -> {\\n\\\n         \\x20   send n to inbox\\n\\\n         \\x20   n\\n\\\n         })\\n\")"
---
[update-cannot-wait] Error: the change given to `.update` cannot wait for anything
   ╭─[ example.vaab:4:5 ]
   │
 4 │     send n to inbox
   │     ───────┬───────  
   │            ╰───────── this sends a value, which waits until the channel has room
   │ 
   │ Help: work the new value out before the `.update`, and hand the finished value in: `let next = ...` and then `.update(value -> next)`
   │ 
   │ Note: `.update` holds the shared value while the change runs, so a wait inside it would keep every other task away from the value until the wait ended — and it may be one of those tasks the wait is for
───╯
